--- a/01_Python101.ipynb
+++ b/01_Python101.ipynb
@@ -54,7 +54,8 @@
     }
    ],
    "source": [
-    "print('Hello World')"
+    "print('Hello World')\n",
+    "# To check if its being committed or not "
    ]
   },
   {
